<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pQ1"
        android:padding="10dp" />
    <RadioGroup
        android:id="@+id/radioGroupPQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/vgp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verygood"/>
        <RadioButton
            android:id="@+id/gp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />
        <RadioButton
            android:id="@+id/np1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuetral" />
        <RadioButton
            android:id="@+id/pp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor"/>
        <RadioButton
            android:id="@+id/vpp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verypoor" />
    </RadioGroup>

    <Button
        android:id="@+id/pq1Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>